# prelude-minimal

./: LICENSE  README.md  prelude-minimal.cabal
Prelude/: Minimal.hs
