name:                prelude-minimal
version:             0.1.0.0
synopsis:            A minimal, classy, alternate Prelude
-- description:
license:             BSD2
license-file:        LICENSE
author:              Duncan Burke
maintainer:          duncankburke@gmail.com
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Prelude.Minimal
  build-depends:     base >=4.8 && <4.9
  default-language:  Haskell2010
